Fix source code being hard to read and having excessive spacing.

--- a/source/stylesheets/post.css.sass
+++ b/source/stylesheets/post.css.sass
@@ -33,7 +33,7 @@ dd, dt
 
 pre, code
   font-family: $code-font
-  font-size: 90%
+  line-height: 1em
 
 textarea
   font-family: $code-font
@@ -120,40 +120,40 @@ b.conum *
 ol arabic
   list-style-type: decimal
 
-.admonitionblock 
+.admonitionblock
 	td.icon [class^="fa icon-"]
-		font-size: 2.5em 
-		text-shadow: 1px 1px 2px rgba(0,0,0,.5) 
-		cursor: default 
+		font-size: 2.5em
+		text-shadow: 1px 1px 2px rgba(0,0,0,.5)
+		cursor: default
 
-.admonitionblock 
+.admonitionblock
   tr
     td.icon
       font-size: 0.8em
 
-.admonitionblock 
+.admonitionblock
 	td.icon
-		.icon-note 
-			&::before 
-				content: "\f05a" 
-				color: #19407c 
-		.icon-tip 
-			&::before 
-				content: "\f0eb" 
-				text-shadow: 1px 1px 2px rgba(155,155,0,.8) 
-				color: #111 
-		.icon-warning 
-			&::before 
-				content: "\f071" 
-				color: #bf6900 
-		.icon-caution 
-			&::before 
-				content: "\f06a" 
-				color: #bf3400 
-		.icon-important 
-			&::before 
-				content: "\f06a" 
-				color: #bf0000 
+		.icon-note
+			&::before
+				content: "\f05a"
+				color: #19407c
+		.icon-tip
+			&::before
+				content: "\f0eb"
+				text-shadow: 1px 1px 2px rgba(155,155,0,.8)
+				color: #111
+		.icon-warning
+			&::before
+				content: "\f071"
+				color: #bf6900
+		.icon-caution
+			&::before
+				content: "\f06a"
+				color: #bf3400
+		.icon-important
+			&::before
+				content: "\f06a"
+				color: #bf0000
 
 div.quoteblock
   margin-bottom: 1.5em
